# Job-scrapper

./: file.py  main.py  pyproject.toml  python.csv
extractors/: rok.py  wwr.py
templates/: home.html  search.html
